# ml-project

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  spam_classifier.py
__marimo__/: spam_classifier.html  spam_classifier.ipynb
__marimo__/session/: spam_classifier.py.json
datasets/: post_cleaned.gzip  pre_cleaned.gzip
