[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets==3.6.0",
    "html5lib>=1.1",
    "mail-parser>=4.1.4",
    "marimo[recommended]>=0.18.4",
    "scikit-learn>=1.8.0",
    "wget>=3.2",
]
