[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets==3.6.0",
    "en-core-web-lg",
    "en-core-web-trf",
    "google-re2>=1.1.20251105",
    "html5lib>=1.1",
    "mail-parser>=4.1.4",
    "marimo[recommended]>=0.18.4",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "spacy-transformers>=1.3.9",
    "wget>=3.2",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }
